Update API document and README
